typescript/checker/tests/conformance/types/any/anyAsGenericFunctionCall.ts.stderr
error: TS2347 {
    span: Span {
        lo: BytePos(
            133,
        ),
        hi: BytePos(
            134,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/any/anyAsGenericFunctionCall.ts:5:9
  |
5 | var a = x<number>();
  |         ^

error: TS2347 {
    span: Span {
        lo: BytePos(
            155,
        ),
        hi: BytePos(
            156,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/any/anyAsGenericFunctionCall.ts:6:9
  |
6 | var b = x<string>('hello');
  |         ^

error: TS2347 {
    span: Span {
        lo: BytePos(
            212,
        ),
        hi: BytePos(
            213,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/any/anyAsGenericFunctionCall.ts:9:9
  |
9 | var c = x<C>(x);
  |         ^

error: TS2347 {
    span: Span {
        lo: BytePos(
            230,
        ),
        hi: BytePos(
            231,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/types/any/anyAsGenericFunctionCall.ts:10:9
   |
10 | var d = x<any>(x);
   |         ^

